frontend/src/styles/globals.css
:root {
  --toastify-color-progress-info: #fff !important;
  --toastify-color-progress-bgo: .6 !important;
}

.grecaptcha-badge {
  visibility: hidden !important;
}

html,
body {
  margin: 0;
  padding: 0;
}

.Toastify__toast {
  min-width: 340px !important;
  width: fit-content !important;
  padding-right: 40px;
}

@media only screen and (width>=480px) {
  /* .Toastify__toast-container {
    min-width: 340px !important;
    width: fit-content !important;
  } */

  /* .Toastify__toast {
    min-width: 340px !important;
    width: fit-content !important;
  } */
}

/* @media only screen and (width<480px) {
  .Toastify__toast {
    display: flex;
    justify-content: flex-end;
  }
} */

.Toastify__toast-container>div:first-child {
  margin: 15px 0 !important;
  display: flex;
  justify-content: flex-end;
}

.Toastify__toast-body>div:last-child {
  text-align: center !important;
}

.toastButton {
  opacity: .97;
}

.toastButton:hover {
  opacity: 1;
}

.slick-prev {
  left: -5% !important;
  z-index: 1 !important;
}

.slick-next {
  right: -5% !important;
  z-index: 1 !important;
}

.slick-prev::before,
.slick-next::before {
  content: '' !important;
}

a {
  color: #3498db;
}

.buttons button {
  margin-right: 15px;
  margin-left: 0 !important;
}

.btn-primary {
  background-color: #1d1d1b !important;
  color: #fff !important;
}

.btn-secondary {
  background-color: #999 !important;
  color: #fff !important;
}

.btn-primary:hover,
.btn-secondary:hover,
.btn-orange:hover {
  opacity: .95;
}

.btn-margin {
  margin-right: 10px !important;
}

.btn-margin-bottom {
  margin-bottom: 10px !important;
}

.btn-resend {
  margin: 0 10px !important;
}

.required::after {
  content: " *";
}

.form-error {
  clear: both;
  height: 65px;
  padding-top: 10px;
  text-align: center;
}

.msg {
  margin: 15px;
}

.msg h2 {
  color: #1d1d1b;
}

.msg p {
  color: #333;
}

/* Avatar */

.avatar,
.avatar-large {
  width: 170px !important;
  height: 170px !important;
}

.avatar-medium {
  width: 64px !important;
  height: 64px !important;
}

.avatar-small {
  width: 32px !important;
  height: 32px !important;
}

.avatar-action-box {
  width: 46px;
  height: 46px;
  background: #ddd;
  cursor: pointer;
}

.avatar-action-icon {
  width: 32px !important;
  height: 32px !important;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  margin-left: 8px;
}

.company-avatar {
  width: 150px;
  height: 75px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.avatar-ctn {
  position: relative;
  margin: 20px 0;
  height: 170px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.user-avatar-verified-small,
.user-avatar-verified-medium,
.user-avatar-verified-large {
  color: #ffff;
  background: #07ac51;
}

.user-avatar-verified-small {
  width: 12px !important;
  height: 12px !important;
}

.user-avatar-verified-icon-small {
  width: 12px !important;
  height: 12px !important;
}

.user-avatar-verified-medium {
  width: 24px !important;
  height: 24px !important;
}

.user-avatar-verified-icon-medium {
  width: 24px !important;
  height: 24px !important;
}

.user-avatar-verified-large {
  width: 32px !important;
  height: 32px !important;
}

.user-avatar-verified-icon-large {
  width: 32px !important;
  height: 32px !important;
}

.info {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  margin: 15px 0;
}

.info label {
  color: #a8a8a8;
  display: inline-block;
  font-size: .9em;
  line-height: 1em;
  white-space: nowrap;
  margin-left: 5px;
}

.dialog-header {
  text-align: center;
}

.dialog-content {
  margin: 0;
  width: 410px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.dialog-actions {
  margin-right: 5px;
  margin-bottom: 10px;
}

.d-adornment {
  margin-right: -13px;
}

.d-adornment-icon {
  color: rgb(0 0 0 / 54%);
  width: 20px !important;
  height: 20px !important;
}

@media only screen and (width <=960px) {
  div.content {
    min-height: calc(100vh - 283px);
  }

  div.validate-email {
    margin: 0;
    padding: 10px;
    min-height: calc(100vh - 283px);
  }

  .buttons {
    margin-top: 15px;
    margin-bottom: 5px;
    display: grid;
    width: 100%;
  }

  .buttons button {
    margin-right: 0 !important;
  }

  .btn-margin {
    margin-right: 0 !important;
  }

  .d-adornment {
    margin-right: -3px;
  }

  .dialog-content {
    width: 350px;
  }
}

div.content {
  margin: 0;
  padding: 0;
  flex: 1;
}

@media only screen and (width >=960px) {
  div.content {
    min-height: calc(100vh - 90px);
  }

  div.validate-email {
    margin: 0;
    padding: 10px;
    min-height: calc(100vh - 90px);
  }

  .buttons {
    display: flex;
    justify-content: flex-end;
    margin-top: 15px;
    margin-bottom: 5px;
  }

}

/* input[type=number] */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  appearance: none;
  margin: 0;
}

input[type="number"] {
  appearance: textfield;
}

.stop-scrolling {
  height: 100%;
  overflow: hidden;
}

.github-fork-ribbon::before {
  background-color: #272727;
}

.slick-disabled {
  visibility: hidden;
}

